--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Extended timeouts for slow model loading
+# nginx/nginx.conf - Complete config with domain/IP restrictions and no JS
 
 user nginx;
 worker_processes auto;
@@ -6,7 +6,7 @@ pid /var/run/nginx.pid;
 error_log /var/log/nginx/error.log warn;
 
 events {
-    worker_connections 1024;
+    worker_connections 2048;
     use epoll;
     multi_accept on;
 }
@@ -27,17 +27,17 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 65;
+    keepalive_timeout 300;
     types_hash_max_size 2048;
     server_tokens off;
-    client_max_body_size 10M;
+    client_max_body_size 50M;
 
-    # VERY LONG timeouts for model loading and AI responses
-    proxy_connect_timeout 300s;              # 5 minutes to connect
-    proxy_send_timeout 1800s;                # 30 minutes to send
-    proxy_read_timeout 1800s;                # 30 minutes to read response
+    # UNLIMITED timeouts for AI responses
+    proxy_connect_timeout 600s;            # 10 minutes to connect
+    proxy_send_timeout 0;                  # UNLIMITED send timeout
+    proxy_read_timeout 0;                  # UNLIMITED read timeout
     
-    # GZIP Configuration
+    # GZIP Configuration (fixed - no duplicate text/html)
     gzip on;
     gzip_vary on;
     gzip_min_length 256;
@@ -45,28 +45,102 @@ http {
     gzip_types
         text/plain
         text/css
-        text/html
         application/json
         application/xml;
 
-    # Security Headers
+    # Security Headers - NO JAVASCRIPT ALLOWED
     add_header X-Frame-Options DENY always;
     add_header X-Content-Type-Options nosniff always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'none'" always;
 
-    # Very conservative rate limiting
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=15r/m;
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=2r/m;
-    limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=3r/m;
+    # Trust Cloudflare IPs for real IP detection (IPv4 only)
+    set_real_ip_from 103.21.244.0/22;
+    set_real_ip_from 103.22.200.0/22;
+    set_real_ip_from 103.31.4.0/22;
+    set_real_ip_from 104.16.0.0/13;
+    set_real_ip_from 104.24.0.0/14;
+    set_real_ip_from 108.162.192.0/18;
+    set_real_ip_from 131.0.72.0/22;
+    set_real_ip_from 141.101.64.0/18;
+    set_real_ip_from 162.158.0.0/15;
+    set_real_ip_from 172.64.0.0/13;
+    set_real_ip_from 173.245.48.0/20;
+    set_real_ip_from 188.114.96.0/20;
+    set_real_ip_from 190.93.240.0/20;
+    set_real_ip_from 197.234.240.0/22;
+    set_real_ip_from 198.41.128.0/17;
+    real_ip_header CF-Connecting-IP;
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=500r/m;
+    limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=6000r/m;
     limit_req_status 429;
 
-    # Main server block
+    # IP Whitelisting - UNCOMMENT TO ENABLE IP RESTRICTIONS
+     geo $allowed_ip {
+         default 0;                      # Deny all by default
+         127.0.0.1/32 1;               # Allow localhost
+         192.168.0.0/16 1;             # Allow private network 192.168.x.x
+         10.0.0.0/8 1;                 # Allow private network 10.x.x.x
+         172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
+         # Add your specific public IPs here:
+         # YOUR_HOME_IP/32 1;          # Replace with your home IP
+         # YOUR_OFFICE_IP/32 1;        # Replace with your office IP
+         # Cloudflare IP ranges (if using Cloudflare proxy):
+         103.21.244.0/22 1;
+         103.22.200.0/22 1;
+         103.31.4.0/22 1;
+         104.16.0.0/13 1;
+         104.24.0.0/14 1;
+         108.162.192.0/18 1;
+         131.0.72.0/22 1;
+         141.101.64.0/18 1;
+         162.158.0.0/15 1;
+         172.64.0.0/13 1;
+         173.245.48.0/20 1;
+         188.114.96.0/20 1;
+         190.93.240.0/20 1;
+         197.234.240.0/22 1;
+         198.41.128.0/17 1;
+     }
+    
+    # ALLOW ALL IPs - Current setting (comment out the block above to use this)
+    #geo $allowed_ip {
+    #    default 1;  # Allow all IPs
+    #}
+
+    # Default server block - handles invalid domains and shows unauthorized page
+    server {
+        listen 80 default_server;
+        server_name _;
+        
+        # Root directory for error pages
+        root /usr/share/nginx/html;
+        
+        # Serve unauthorized page for invalid domains
+        location / {
+            return 403;
+        }
+        
+        # Error page for invalid domains
+        error_page 403 /unauthorized.html;
+        location = /unauthorized.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+    }
+
+    # Main server block - ONLY for authorized domains
     server {
         listen 80;
-        server_name localhost _;
+        server_name localhost ai.junder.uk;  # ONLY these domains allowed
         
+        # IP Access Control - Return 403 for blocked IPs
+        if ($allowed_ip = 0) {
+            return 403;
+        }
+
         # Root directory for static files
         root /usr/share/nginx/html;
 
@@ -77,9 +151,9 @@ http {
             add_header Cache-Control "public, max-age=2592000";
         }
         
-        # Chat endpoint - VERY LONG TIMEOUTS for model loading
+        # Chat endpoint - UNLIMITED streaming
         location /chat {
-            limit_req zone=chat_limit burst=1 nodelay;
+            limit_req zone=chat_limit burst=1000 nodelay;
             
             proxy_pass http://quart-app:8000/chat;
             proxy_set_header Host $host;
@@ -96,26 +170,42 @@ http {
             proxy_set_header Connection "";
             proxy_http_version 1.1;
             
-            # VERY LONG timeouts for model loading
-            proxy_connect_timeout 300s;   # 5 minutes to connect
-            proxy_send_timeout 1800s;     # 30 minutes to send
-            proxy_read_timeout 1800s;     # 30 minutes to read response
+            # UNLIMITED timeouts for streaming
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 0;            # UNLIMITED
+            proxy_read_timeout 0;            # UNLIMITED
         }
         
         # Authentication endpoints
         location ~ ^/(login|register|logout)$ {
-            limit_req zone=login_limit burst=1 nodelay;
+            limit_req zone=login_limit burst=100 nodelay;
             
             proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        # Admin endpoints
+        location /admin {
+            limit_req zone=general_limit burst=200 nodelay;
+            
+            proxy_pass http://quart-app:8000/admin;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # UNLIMITED timeouts for admin operations
+            proxy_connect_timeout 120s;
+            proxy_send_timeout 0;
+            proxy_read_timeout 0;
         }
         
         # All other requests
         location / {
-            limit_req zone=general_limit burst=3 nodelay;
+            limit_req zone=general_limit burst=500 nodelay;
             
             proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
@@ -123,13 +213,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Extended timeouts for regular requests
+            # UNLIMITED timeouts
             proxy_connect_timeout 120s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
+            proxy_send_timeout 0;
+            proxy_read_timeout 0;
         }
         
-        # Health check endpoint
+        # Health check endpoint (no rate limiting)
         location /health {
             access_log off;
             proxy_pass http://quart-app:8000/health;
@@ -137,6 +227,26 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        # Block access to sensitive paths
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+        
+        # Error pages for this domain
+        error_page 403 /unauthorized.html;
+        location = /unauthorized.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+        
+        error_page 429 /rate_limited.html;
+        location = /rate_limited.html {
+            root /usr/share/nginx/html;
+            internal;
         }
     }
 }
