UUUGE - mmap disabled mlock enabled to prevent swap out of ram to disk

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# .env file - HIGH PERFORMANCE with VALID options only
+# .env file - HIGH PERFORMANCE with PERMANENT RAM/VRAM LOADING
 SECRET_KEY=your-very-secret-key-change-this-in-production
 SECURE_COOKIES=false
 ADMIN_USERNAME=admin
@@ -41,6 +41,11 @@ CUDA_MEMORY_FRACTION=0.95           # Use almost all VRAM
 OLLAMA_GPU_LAYERS=22                # Target
 OLLAMA_NUM_THREAD=8                 # Fewer CPU threads (more on GPU)
 
+# CRITICAL: Permanent RAM/VRAM Loading Settings
+OLLAMA_MLOCK=true                   # Lock model in RAM/VRAM - prevents swapping
+OLLAMA_MMAP=false                   # Disable memory mapping - force full RAM loading
+OLLAMA_NUMA=false                   # Disable NUMA for single-GPU setups
+
 # Logging
 LOG_LEVEL=INFO
 LOG_FORMAT=json
@@ -55,6 +60,11 @@ OLLAMA_MAIN_GPU=0
 OLLAMA_CONTEXT_SIZE=16384           # Large context
 OLLAMA_BATCH_SIZE=256               # Large batches
 OLLAMA_KEEP_ALIVE=-1                # Permanent loading
+
+# Memory Management - PERMANENT LOADING
+OLLAMA_MAX_LOADED_MODELS=1          # Only load one model at a time
+OLLAMA_LOAD_TIMEOUT=15m             # Allow time for full loading
+OLLAMA_NOPRUNE=true                 # Never unload models automatically
 
 # REMOVED INVALID OPTIONS:
 # OLLAMA_FLASH_ATTENTION (not valid)
