YOYO - x6 # Build argument to force rebuild when files change ARG CACHEBUST=1

--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,5 +1,8 @@
 FROM ubuntu:20.04
 
+# Build argument to force rebuild when files change
+ARG CACHEBUST=1
+
 # Set environment variables to avoid interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive
 ENV OLLAMA_HOST=0.0.0.0
@@ -16,18 +19,22 @@ RUN apt-get update && \
 # Install Ollama
 RUN curl -fsSL https://ollama.com/install.sh | sh
 
-# Copy initialization script and Modelfile  
-COPY scripts/init-ollama.sh /scripts/init-ollama.sh
-COPY Modelfile /root/Modelfile
-RUN chmod +x /scripts/init-ollama.sh
-
 # Set working directory
 WORKDIR /root
+
+# CRITICAL: Copy files that change frequently at the END
+# This ensures Docker will rebuild these layers when files change
+# Copy initialization script first
+COPY scripts/init-ollama.sh /scripts/init-ollama.sh
+
+# Copy Modelfile 
+COPY Modelfile /root/Modelfile
+
+# Set permissions (this will also be invalidated when files change)
+RUN chmod +x /scripts/init-ollama.sh
 
 # Expose Ollama port
 EXPOSE 11434
 
 # Set entrypoint to initialization script
 ENTRYPOINT ["/scripts/init-ollama.sh"]
-
-
