YOYO - 7x # Build argument to force rebuild ONLY for file copies ARG CACHEBUST=1
Kinda uneeded

--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,13 +1,10 @@
 FROM ubuntu:20.04
 
-# Build argument to force rebuild when files change
-ARG CACHEBUST=1
-
 # Set environment variables to avoid interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive
 ENV OLLAMA_HOST=0.0.0.0
 
-# Install dependencies first
+# Install dependencies first (CACHED - expensive operations)
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     curl \
@@ -16,14 +13,19 @@ RUN apt-get update && \
     gpg \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Ollama
+# Install Ollama (CACHED - very expensive operation)
 RUN curl -fsSL https://ollama.com/install.sh | sh
 
-# Set working directory
+# Set working directory (CACHED)
 WORKDIR /root
 
-# CRITICAL: Copy files that change frequently at the END
+# Build argument to force rebuild ONLY for file copies
+ARG CACHEBUST=1
+
+# CRITICAL: Copy files that change frequently AFTER the cache bust
 # This ensures Docker will rebuild these layers when files change
+# but keeps all the expensive install operations cached
+
 # Copy initialization script first
 COPY scripts/init-ollama.sh /scripts/init-ollama.sh
 
